--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <i class="fa-solid fa-magnifying-glass fa__search click"></i>
           </div>
           <div class="search__results">
-            <h3>Results for: <span class="movie__title"></span></h3>
+            <h3 class="results">Results for: <span class="movie__title"></span></h3>
           </div>
         </div>
       </div>
