--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
       <div class="container">
         <div class="row">
             <select id="filter" onchange="filterSort(event)">
-                <option value="" disabled selected>Sort</option>
+                <option value="Sort" disabled selected>Sort</option>
                 <option value="YEAR">Year</option>
                 <option value="A_Z">A - Z</option>
+                <option value="Clear_Filter">Clear Filter</option>
               </select>
           <div class="movies__wrapper">
             <div class="movie">
