--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
               <h3 class="results">
                 Results for: <span class="movie__title"></span>
               </h3>
-              <select class="sort__option id="filter" onchange="filterSort(event)">
+              <select class="sort__option" id='filter' onchange="filterSort(event)">
                 <option value="Sort" disabled selected>Sort</option>
-                <option value="YEAR">Year</option>
+                <option value="OLDEST">Oldest</option>
+                <option value="NEWEST">Newest</option>
                 <option value="A_Z">A - Z</option>
                 <option value="Clear_Filter">Clear Filter</option>
               </select>
